Fixes ai-music-block track layout on mobile

--- a/docs/main.css
+++ b/docs/main.css
@@ -892,17 +892,14 @@ video {
 .flex {
   display: flex;
 }
-.grid {
-  display: grid;
-}
 .w-full {
   width: 100%;
 }
 .list-disc {
   list-style-type: disc;
 }
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.flex-col {
+  flex-direction: column;
 }
 .place-content-between {
   align-content: space-between;
@@ -917,9 +914,6 @@ video {
 }
 .gap-4 {
   gap: 1rem;
-}
-.p-2 {
-  padding: 0.5rem;
 }
 .pl-5 {
   padding-left: 1.25rem;
